--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,12 @@ description: dart livescore demo.
 #homepage: https://migratorydata.com
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.12.0'
 
 dependencies:
   migratorydata_client_dart_v6: ^1.0.2
 
 dev_dependencies:
-  build_runner: ^1.10.0
-  build_web_compilers: ^2.11.0
+  build_runner:
+  build_web_compilers:
   pedantic: ^1.9.0
